--- a/RedDotAudio/Builds/MacOSX/Info-Standalone_Plugin.plist
+++ b/RedDotAudio/Builds/MacOSX/Info-Standalone_Plugin.plist
@@ -8,11 +8,11 @@
     <key>CFBundleIconFile</key>
     <string></string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.AudioInput</string>
+    <string>com.yourcompany.RedDotAudio</string>
     <key>CFBundleName</key>
-    <string>Audio Input</string>
+    <string>RedDotAudio</string>
     <key>CFBundleDisplayName</key>
-    <string>Audio Input</string>
+    <string>RedDotAudio</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleSignature</key>
